--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.3 "Denk One", sans-serif;
+  font: normal 100%/1.3 Georgia, sans-serif;
 }
 
 *, *::before, *::after {
@@ -26,16 +26,18 @@ figure {
 }
 
 .img-flex {
-  max-width: 100%;
+  width: 100%;
+  display: block;
   float: left;
 }
 
 h2 {
   margin-top: 0;
+  font-family: "Denk One", sans-serif;
 }
 
 p {
-  font: normal 100%/1.3 Georgia, sans-serif;
+
 }
 
 figcaption {
@@ -44,13 +46,33 @@ figcaption {
 }
 
 @media only screen and (min-width: 25em) {
+
+
 }
 
 @media only screen and (min-width: 38em) {
+
+  figure {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
+
+  figure {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
+
+figure {
+  font-size: 130%;
+  line-height: 1.5;
+}
+
 }
